[package]
name = "pihash"
version = "0.3.6"
authors = ["Drew Short <warrick@sothr.com>"]
description = "A simple library for generating perceptual hashes for images and comparing images based on their perceptual hashes."
repository = "https://github.com/warricksothr/Perceptual-Image-Hashing/"
readme = "README.md"
keywords = ["phash", "perceptual", "image", "comparison"]
license = "MIT"
exclude = ["test_images/*"]

[lib]
crate-type = ["dylib", "rlib"]

[features]
default = []

# Feature to allow bench testing on nightly
# But still allow the code to build on beta/stable
bench = []

[dependencies]
libc = "0.2.20"
rustc-serialize = "0.3.22"
dft = "0.5.4"
image = "0.13.0"
num = "0.1.36"
docopt = "0.7.0"
flate2 = "0.2.19"
sha1 = "0.2.0"
