[package]
name = "pihash"
version = "0.5.0"
authors = ["Drew Short <warrick@sothr.com>"]
description = "A simple library for generating perceptual hashes for images and comparing images based on their perceptual hashes."
repository = "https://github.com/warricksothr/Perceptual-Image-Hashing/"
readme = "README.md"
keywords = ["phash", "perceptual", "image", "comparison"]
license = "MIT"
exclude = ["test_images/*"]

[lib]
crate-type = ["dylib", "rlib"]

[features]
default = []

# Feature to allow bench testing on nightly
# But still allow the code to build on beta/stable
bench = []

[dependencies]
libc = "0.2.62"
rustc-serialize = "0.3.24"
dft = "0.5.5"
image = "0.22.1"
num = "0.2.0"
docopt = "1.1.0"
serde = "1.0.99"
serde_derive = "1.0.99"
flate2 = "1.0.11"
sha1 = "0.6.0"

